--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,21 @@ i {
 
 .container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .input {
     text-align: center;
     margin-bottom: 30px;
+}
+
+.card {
+    width: 70px;
+    height: 70px;
+    text-align: center;
+    margin: 10px;
+    border: 1px solid blueviolet;
+    padding: 5px;
+    border-radius: 20px;
 }
